# deeplearning-uva-dl-spring-2023-exploration

./: README.md
dl-utils/: .gitignore  Cargo.toml
dl-utils-burn-sequential/: Cargo.toml
dl-utils-burn-sequential/src/: extracted_field.rs  lib.rs  utils.rs
dl-utils-burn-sequential/tests/: test.rs
dl-utils/examples/: init.rs
dl-utils/src/: builder.rs  lib.rs
dl-utils/src/nn/: activation.rs  dropout.rs  flatten.rs  mod.rs  pool.rs  pos.rs
gen-energy-based/: main.py
inception-res-dense/: .gitignore  Cargo.toml  README.md
inception-res-dense/src/: lib.rs  training.rs  utils.rs
inception-res-dense/src/data/: cifar10.rs  mod.rs
inception-res-dense/src/model/: dense.rs  inception.rs  mod.rs
inception-res-dense/src/model/res/: mod.rs  pre.rs  regular.rs
revn-transformer/: Cargo.toml
revn-transformer-py/: .gitignore  anomaly.py  main.py  requirements.txt  revn.py
revn-transformer/src/: data.rs  main.rs  model.rs  train.rs
vae/: main.py
