[package]
name = "dl-utils-burn-sequential"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
# macro
proc-macro2 = "1.0.78"

# DL
burn = { version = "0.12.1" }

dl-utils = { path = "../dl-utils" }

# macro
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"

# serde
serde = { version = "1.0.196", features = ["derive"] }

# error
anyhow = "1.0.79"
thiserror = "1.0.56"

# misc
itertools = "0.12.0"

[dev-dependencies]
burn = { version = "0.12.1", features = ["ndarray"] }

