[package]
name = "dl-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
# DL
burn = { version = "0.12.1" }

# error
anyhow = "1.0.79"
thiserror = "1.0.56"

# serde
serde = { version = "1.0.196", features = ["derive"] }

# misc
itertools = "0.12.0"
image = "0.24.8"
termion = "3.0.0"
derive-new = "0.6.0"

